Fix: Centered - Vertical align tab label #761

--- a/css/leptonChrome.css
+++ b/css/leptonChrome.css
@@ -9505,12 +9505,12 @@
     /* Based on https://github.com/MrOtherGuy/firefox-csshacks/blob/master/chrome/centered_tab_label.css */
     .tab-label-container {
       display: grid;
-      justify-content: safe center;
-      align-items: safe center;
     }
     .tab-label,
     .tab-secondary-label {
       overflow: clip;
+      justify-self: safe center;
+      align-self: safe center;
     }
     .tabbrowser-tab[selected]:not(:hover) .tab-label-container:not([textoverflow]),
     .tabbrowser-tab:not(:hover, [pinned]) .tab-label-container:not([textoverflow]) {
